--- a/src/hojas-de-estilo/TareaFormulario.css
+++ b/src/hojas-de-estilo/TareaFormulario.css
@@ -5,28 +5,27 @@
     flex-wrap: wrap;
     align-items: center;
     justify-content: center;     
-  }
-  
+  }  
   /* Campo de Texto */
   
   .tarea-input {
-    width: 350px;
+    width: 95%;
     font-size: 18px;
     background-color: white;
     padding: 14px 32px 14px 16px;
     border-radius: 4px 0 0 4px;
     border: 2px solid #00471b;
     outline: none;
-  }
-  
+  }  
   /* Boton Agregar Tarea */
   
   .tarea-boton {
     padding: 16px;
+    margin-top: 20px;
     font-size: 18px;
     font-family: Roboto, sans-serif;
     border: none;
-    border-radius: 0 4px 4px 0;
+    border-radius: 14px;
     cursor: pointer;
     outline: none;
     background: #00471b;
